gcc-14.2.0/gcc/testsuite/gm2/iso/const/fail/testtrunc.mod
version https://git-lfs.github.com/spec/v1
oid sha256:1f32fb6ce24a3b44843a71018db66cd45dfac1ae5e3a5ddeecdfea9d392b028a
size 87
